--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,6 +40,9 @@
     <string name="manual_flash_note">Please flash %s from the SD card to complete the operation.</string>
     <string name="reboot_confirmation">Do you want to reboot now?</string>
     <string name="reboot_recovery_confirmation">Do you want to reboot to recovery now?</string>
+    <string name="install_warning_title">Be careful!</string>
+    <string name="install_warning">In some cases, your device might no longer boot after installing Xposed.\n\nIf you never heard about \"soft brick\" and \"bootloop\" before or if you don\'t know how to recover from such a situation, do <b>NOT</b> install Xposed!\n\nIn any case, having a recent backup is highly recommended.</string>
+    <string name="dont_show_again">Don\'t show this again</string>
 
     <!--  File operations -->
     <string name="root_failed">Failed to get root access.\n\nMake sure your device is rooted properly and you have not blocked shell commands.</string>
