Prepare resources to use a ViewPager for download details

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -87,6 +87,8 @@
     <string name="menuSearch">Search</string>
     <string name="menuReload">Reload</string>
     <string name="changes">Changes:</string>
+    <string name="description_page">Description</string>
+    <string name="versions_page">Versions</string>
     <string name="branch_display">(%s branch)</string>
     <string name="download_author">by %s</string>
     <string name="download_unknown_author">unknown author</string>
