--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -115,7 +115,9 @@
     <string name="settings_group_download">Download</string>
     <string name="settings_enable_downloads">Enable downloads</string>
     <string name="settings_enable_downloads_summary">Allow Xposed Installer to check for updates and new modules</string>
-    <string name="settings_group_experimental" tools:ignore="UnusedResources">Experimental</string>
+    <string name="settings_group_experimental">Experimental</string>
+    <string name="settings_disable_resources">Disabled resource hooks</string>
+    <string name="settings_disable_resources_summary">Workaround for conflicts with theming engines\n<b>WARNING:</b> Modules which try to change resources will not work when this is enabled.</string>
     <string name="settings_performance_experiment" tools:ignore="UnusedResources">Performance experiment</string>
     <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">If you enable this, your system performance might either increase, decrease or stay the same. Feel free to try it and report back which effect you see (or if there is none at all). You need to reinstall the framework and reboot after changing this.</string>
 
