Updated Japanese Translation

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -81,6 +81,8 @@
     <string name="settings_enable_downloads">ダウンロードを有効化</string>
     <string name="settings_enable_downloads_summary">Xposedインストーラやモジュールの更新を定期的に確認するようにします。</string>
     <string name="settings_group_experimental">実験的</string>
+    <string name="settings_disable_resources">リソースフックを無効化</string>
+    <string name="settings_disable_resources_summary">テーマエンジンとの競合を解消します。\n<b>警告:</b>このオプションを有効化するとリソースをフックするモジュールが動作しなくなります。</string>
     <string name="settings_performance_experiment">パフォーマンス実験</string>
     <string name="settings_performance_experiment_summary">これを有効にするとパフォーマンスに影響が出る可能性があります。どうか試してみて効果があるかないか報告してください。有効にした後はフレームワークを再インストールして再起動してください。</string>
 
