Avoid crashes in the log section when file is too large
Many modules are compatible only with certain ROMs and produce many errors
on other ROMs. This results in a large log file. Don't load the full log
file in such cases to give users an easy chance to identify the
incompatible module and disable it.

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -125,6 +125,7 @@
     <string name="logs_load_failed">Log konnte nicht gelesen werden:</string>
     <string name="logs_save_failed">Log konnte nicht auf der SD-Karte gespeichert werden:</string>
     <string name="sdcard_not_writable">SD-Karte wurde nicht gefunden oder ist nicht beschreibbar</string>
+    <string name="log_too_large">Log ist größer als %1$,d kB, die ersten %2$,d kB wurden übersprungen</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Hauptentwickler:</string>
