--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -129,6 +129,7 @@
     <string name="menuClearLog">Clear log now</string>
     <string name="logs_cleared">Log successfully cleared</string>
     <string name="logs_clear_failed">Could not clear the log:</string>
+    <string name="log_is_empty">Log is empty</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Main developers:</string>
